--- a/styleinicio.css
+++ b/styleinicio.css
@@ -6,7 +6,7 @@ body{
     position: relative;
     height: 500px;
     width: 100%;
-    background-image: url("");
+    background-image: url("https://thumbs.gfycat.com/FlakySillyArcticseal-size_restricted.gif");
     background-size: cover;
     background-position: center;
     backdrop-filter: brightness(50%);
